Fixing up the styling on the home page re: last tweet spacing / layout.

--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ p {
 
 #home #sidebar-nav {
     line-height: 84px;
+    margin-bottom: 0px;
 }
 
 /* Home Page text styling: */
